--- a/1010/bin/.gitignore
+++ b/1010/bin/.gitignore
@@ -4,3 +4,7 @@
 /for_osztok.class
 /for_hanyszor.class
 /for_tokeletesSzamE.class
+/for_szamtanikozep.class
+/for_szamjegyekOsszege.class
+/for_zaszlo.class
+/for_negyzet.class
